src/test/deca/syntax/invalid/created/circularInclude/fA.decah
#include "fA.decah"

class A {
}

